fix : 줄바꿈 대응 위한 스타일 코드 수정 + 관리자 템플릿 보유 홈 많아질 경우 모달안에서 overflow-hidden 되어 컨텐츠 안보이는 문제 수정(Modal.tsx)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,8 +91,7 @@ body {
 
 /* 스크롤바 숨기면서 스크롤링 기능은 허용 */
 html,
-section,
-div {
+section {
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width: none; /* for Firefox */
   overflow-y: scroll;
